intel/bench_214/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libgb18030ext.h_gb18030ext_wctomb_with_main/log.txt
bench_214/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libgb18030ext.h_gb18030ext_wctomb_with_main/extr_.BGAQRCode-Androidzbarsrcmainjnilibiconv-1.15libgb18030ext.h_gb18030ext_wctomb_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
